--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <i class="icon fab fa-facebook-f"></i>
     <i class="icon fab fa-instagram"></i>
     <i class="icon fas fa-envelope"></i>
-    <p class="copy-right">© Copyright 2018 TinDog</p>
+    <p class="copy-right">© Jaideep singh thakur</p>
 </div>
   </footer>
 
